source_code/gatt_server/build/log/idf_py_stdout_output_9598
Command: ninja all
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/doannhat214031/Bachelor-of-Science-Research-Project/source_code/gatt_server/build/bootloader/esp-idf/esptool_py && /home/doannhat214031/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/doannhat214031/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/doannhat214031/Bachelor-of-Science-Research-Project/source_code/gatt_server/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/11] No install step for 'bootloader'
[3/11] Building C object esp-idf/dht/CMakeFiles/__idf_dht.dir/dht.c.obj
FAILED: esp-idf/dht/CMakeFiles/__idf_dht.dir/dht.c.obj 
/home/doannhat214031/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-3236-g465b159cd8\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/doannhat214031/Bachelor-of-Science-Research-Project/source_code/gatt_server/build/config -I/home/doannhat214031/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/dht -I/home/doannhat214031/esp-idf/components/newlib/platform_include -I/home/doannhat214031/esp-idf/components/freertos/config/include -I/home/doannhat214031/esp-idf/components/freertos/config/include/freertos -I/home/doannhat214031/esp-idf/components/freertos/config/xtensa/include -I/home/doannhat214031/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/doannhat214031/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/doannhat214031/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/doannhat214031/esp-idf/components/freertos/esp_additions/include -I/home/doannhat214031/esp-idf/components/esp_hw_support/include -I/home/doannhat214031/esp-idf/components/esp_hw_support/include/soc -I/home/doannhat214031/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/doannhat214031/esp-idf/components/esp_hw_support/dma/include -I/home/doannhat214031/esp-idf/components/esp_hw_support/ldo/include -I/home/doannhat214031/esp-idf/components/esp_hw_support/debug_probe/include -I/home/doannhat214031/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/doannhat214031/esp-idf/components/esp_hw_support/power_supply/include -I/home/doannhat214031/esp-idf/components/esp_hw_support/port/esp32/. -I/home/doannhat214031/esp-idf/components/esp_hw_support/port/esp32/include -I/home/doannhat214031/esp-idf/components/heap/include -I/home/doannhat214031/esp-idf/components/heap/tlsf -I/home/doannhat214031/esp-idf/components/log/include -I/home/doannhat214031/esp-idf/components/soc/include -I/home/doannhat214031/esp-idf/components/soc/esp32 -I/home/doannhat214031/esp-idf/components/soc/esp32/include -I/home/doannhat214031/esp-idf/components/soc/esp32/register -I/home/doannhat214031/esp-idf/components/hal/platform_port/include -I/home/doannhat214031/esp-idf/components/hal/esp32/include -I/home/doannhat214031/esp-idf/components/hal/include -I/home/doannhat214031/esp-idf/components/esp_rom/include -I/home/doannhat214031/esp-idf/components/esp_rom/esp32/include -I/home/doannhat214031/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/doannhat214031/esp-idf/components/esp_rom/esp32 -I/home/doannhat214031/esp-idf/components/esp_common/include -I/home/doannhat214031/esp-idf/components/esp_system/include -I/home/doannhat214031/esp-idf/components/esp_system/port/soc -I/home/doannhat214031/esp-idf/components/esp_system/port/include/private -I/home/doannhat214031/esp-idf/components/xtensa/esp32/include -I/home/doannhat214031/esp-idf/components/xtensa/include -I/home/doannhat214031/esp-idf/components/xtensa/deprecated_include -I/home/doannhat214031/esp-idf/components/lwip/include -I/home/doannhat214031/esp-idf/components/lwip/include/apps -I/home/doannhat214031/esp-idf/components/lwip/include/apps/sntp -I/home/doannhat214031/esp-idf/components/lwip/lwip/src/include -I/home/doannhat214031/esp-idf/components/lwip/port/include -I/home/doannhat214031/esp-idf/components/lwip/port/freertos/include -I/home/doannhat214031/esp-idf/components/lwip/port/esp32xx/include -I/home/doannhat214031/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/doannhat214031/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/doannhat214031/esp-idf/components/driver/deprecated -I/home/doannhat214031/esp-idf/components/driver/i2c/include -I/home/doannhat214031/esp-idf/components/driver/touch_sensor/include -I/home/doannhat214031/esp-idf/components/driver/twai/include -I/home/doannhat214031/esp-idf/components/driver/touch_sensor/esp32/include -I/home/doannhat214031/esp-idf/components/esp_pm/include -I/home/doannhat214031/esp-idf/components/esp_ringbuf/include -I/home/doannhat214031/esp-idf/components/esp_driver_gpio/include -I/home/doannhat214031/esp-idf/components/esp_driver_pcnt/include -I/home/doannhat214031/esp-idf/components/esp_driver_gptimer/include -I/home/doannhat214031/esp-idf/components/esp_driver_spi/include -I/home/doannhat214031/esp-idf/components/esp_driver_mcpwm/include -I/home/doannhat214031/esp-idf/components/esp_driver_ana_cmpr/include -I/home/doannhat214031/esp-idf/components/esp_driver_i2s/include -I/home/doannhat214031/esp-idf/components/esp_driver_sdmmc/include -I/home/doannhat214031/esp-idf/components/sdmmc/include -I/home/doannhat214031/esp-idf/components/esp_driver_sdspi/include -I/home/doannhat214031/esp-idf/components/esp_driver_sdio/include -I/home/doannhat214031/esp-idf/components/esp_driver_dac/include -I/home/doannhat214031/esp-idf/components/esp_driver_rmt/include -I/home/doannhat214031/esp-idf/components/esp_driver_tsens/include -I/home/doannhat214031/esp-idf/components/esp_driver_sdm/include -I/home/doannhat214031/esp-idf/components/esp_driver_i2c/include -I/home/doannhat214031/esp-idf/components/esp_driver_uart/include -I/home/doannhat214031/esp-idf/components/vfs/include -I/home/doannhat214031/esp-idf/components/esp_driver_ledc/include -I/home/doannhat214031/esp-idf/components/esp_driver_parlio/include -I/home/doannhat214031/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/doannhat214031/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/esp_idf_lib_helpers -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/doannhat214031/Bachelor-of-Science-Research-Project/source_code/gatt_server=. -fmacro-prefix-map=/home/doannhat214031/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/dht/CMakeFiles/__idf_dht.dir/dht.c.obj -MF esp-idf/dht/CMakeFiles/__idf_dht.dir/dht.c.obj.d -o esp-idf/dht/CMakeFiles/__idf_dht.dir/dht.c.obj -c /home/doannhat214031/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/dht/dht.c
/home/doannhat214031/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/dht/dht.c:117:1: error: unknown type name 'SRCS'
  117 | SRCS dht.c
      | ^~~~
/home/doannhat214031/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/dht/dht.c: In function 'dht_fetch_data':
/home/doannhat214031/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/dht/dht.c:180:16: error: implicit declaration of function 'dht_await_pin_state' [-Wimplicit-function-declaration]
  180 |     CHECK_LOGE(dht_await_pin_state(pin, 40, 0, NULL),
      |                ^~~~~~~~~~~~~~~~~~~
/home/doannhat214031/Bachelor-of-Science-Research-Project/source_code/gatt_server/components/dht/dht.c:126:19: note: in definition of macro 'CHECK_LOGE'
  126 |         if ((__ = x) != ESP_OK) { \
      |                   ^
[4/11] Completed 'bootloader'
ninja: build stopped: subcommand failed.
